# cagent

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  CLAUDE.md  README.md  REVIEW.md  TEST_ANALYSIS.md  agent.Dockerfile  cell.Dockerfile  cell_entrypoint.sh  dev_up.sh  docker-compose.yml  memory.json  package-lock.json  package.json  pyproject.toml  requirements-test.txt  run_tests.sh
.github/workflows/: ci.yml  publish-sdk.yml  publish.yml
.jules/: bolt.md  sentinel.md
cell-requirements/: pyproject.toml
configs/: alerts.json  cagent.yaml  cagent_connected.yaml  claw_egress_config.json  claw_profile.json  code-review.json  customer-support.json  minimal.json  profiles-manifest.json  widgets.json
configs/cell/profile.d/: shell.sh  tmux_session.sh
configs/coredns/: Corefile
configs/envoy/: entrypoint.sh  envoy-enhanced.yaml  filter.lua
configs/frpc/: entrypoint.sh  frpc.toml
configs/gvisor/: runsc.toml
configs/mitm/: Dockerfile  dlp_addon.py  dlp_config.json  mitm_addon.py  pyproject.toml
configs/profiles/: PROFILES.md  claw_profile.json  code-review.json  customer-support.json  data-pipeline.json  devops.json  manifest.json  minimal.json  research-agent.json  web-browsing.json
configs/seccomp/: cell-profile.json
configs/seccomp/profiles/: hardened.json  permissive.json  standard.json
configs/vector/: vector.yaml
configs/vector/sinks/: connected.yaml  standalone.yaml
control-plane/: .env.example  .gitignore  README.md  docker-compose.yml
control-plane/configs/frps/: frps.toml
control-plane/configs/vault/: init-vault.sh  vault.hcl
control-plane/services/admin-ui/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
control-plane/services/control-plane/: Dockerfile  entrypoint.sh  main.py  seed.py
control_plane/: .env.example  .gitignore  README.md  docker-compose.yml
control_plane/configs/frps/: frps.toml
control_plane/services/backend/: Dockerfile  entrypoint.sh  main.py  post_seed.py  requirements-test.txt  run_tests.sh  seed.py
control_plane/services/frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
data-plane/: .env.example  Dockerfile  README.md  agent-entrypoint.sh  agent.Dockerfile  docker-compose.yml
data-plane/configs/: static-config.yaml
data-plane/configs/envoy/: envoy-enhanced.yaml
data-plane/configs/fluent-bit/: fluent-bit.conf
data-plane/configs/frpc/: frpc.toml
data-plane/services/agent-manager/: Dockerfile  main.py
data-plane/tests/: conftest.py  test_credential_injector.py  test_e2e.py  test_envoy.py
data_plane/: .env.example  README.md  agent.Dockerfile  docker-compose.yml  entrypoint.sh  pytest.ini  requirements-test.txt  run.sh  run_tests.sh  seed_traffic.py
data_plane/configs/: cagent.yaml
data_plane/scripts/: load-static-config.sh  network_hardening.sh
data_plane/tests/: test_dns_filter.py  test_e2e.py  test_envoy.py
docs/: REVIEW.md  architecture-review.md  configuration.md  development.md  repo-separation-plan.md  scalability-analysis.md  security-concerns.md  technical-review.md
e2e/: DEBUGGING.md  docker-compose.e2e.yml  run.sh  run_tests.sh  test_cp_dp_e2e.py
mcp-server/: README.md  pyproject.toml
mcp-server/cagent_mcp/: __init__.py  config.py  server.py
mcp-server/tests/: test_tools.py
packer/: aws-marketplace.pkr.hcl  gcp-marketplace.pkr.hcl
packer/scripts/: provision.sh
roadmap/: ceo-review-2026-03-14.md  egress-dlp.md  falco.md  opa.md  pingora.md  tetragon.md  tracing.md
scripts/: aws-first-boot.service  aws-first-boot.sh  gcp-first-boot.service  gcp-first-boot.sh  gen_mitm_ca.sh  gen_mtls_certs.sh  local.sh  resource_test.sh  seed_traffic.py  setup.sh  test.sh
scripts/hooks/: install.sh  pre-commit  pre-push
sdk/: README.md  pyproject.toml
sdk/src/cagent/: __init__.py  async_client.py  auth.py  cells.py  cli.py  client.py  dlp_policies.py  domain_policies.py  exceptions.py  logs.py  models.py  profiles.py
sdk/tests/: conftest.py  test_auth.py  test_cells.py  test_cli.py  test_client.py  test_community.py  test_dlp_policies.py  test_domain_policies.py  test_logs.py  test_profiles.py
services/agent_manager/: Dockerfile  constants.py  main.py
services/email_proxy/: Dockerfile  config.py  main.py  policy.py  pyproject.toml
services/email_proxy/providers/: __init__.py  base.py  generic.py  gmail.py  outlook.py
services/email_proxy/tests/: test_policy.py  test_providers.py
services/proxy/: Cargo.toml  Dockerfile
services/proxy/src/: certs.rs  config.rs  config_api.rs  dlp.rs  dns.rs  main.rs  mitm.rs  proxy.rs  util.rs
services/proxy/src/email/: config.rs  handler.rs  imap.rs  mod.rs  policy.rs  smtp.rs
services/proxy/src/src/: config.rs  config_api.rs  dns.rs  main.rs  mitm.rs  proxy.rs
services/warden/: Dockerfile  alert_loop.py  config_generator.py  config_sync.py  constants.py  container_ops.py  duckdb_log_client.py  heartbeat_loop.py  log_client.py  main.py  models.py  openobserve_client.py  pyproject.toml  runtime_config.py  tracing.py  utils.py  victorialogs_client.py  warden_auth.py
services/warden/frontend/: eslint.config.js  package-lock.json  package.json
services/warden/frontend/src/api/: client.ts
services/warden/frontend/src/pages/: Config.tsx  Status.tsx  Terminal.tsx
services/warden/frontend/src/utils/: containers.ts
services/warden/routers/: analytics.py  commands.py  config.py  containers.py  domain_policy.py  ext_authz.py  health.py  logs.py  policies.py  ssh_tunnel.py  status.py  terminal.py
tests/: conftest.py  test_analytics_logic.py  test_analytics_security.py  test_credential_injector.py  test_dlp_addon.py  test_dlp_sync.py  test_dns_filter.py  test_domain_policy_auth.py  test_e2e.py  test_envoy.py  test_mtls_config.py  test_openobserve_client.py  test_profiles.py  test_public_ip.py  test_security_path_traversal.py  test_tracing.py  test_victorialogs_client.py  test_warden_access_control.py  test_warden_auth.py  test_warden_interactive_apis.py  test_websocket_origin_validation.py
(+144 files in other folders)
