[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cagent-mcp-server"
version = "0.1.0"
description = "MCP server for managing Cagent secure sandboxes from Claude Code and other MCP clients"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Kashyap Puranik" }]
keywords = ["cagent", "mcp", "claude-code", "ai-agents", "sandbox"]
dependencies = [
    "mcp>=1.0,<2.0",
    "cagent>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
cagent-mcp = "cagent_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["cagent_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
