[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cagent"
version = "0.1.0"
description = "Python SDK for the Cagent Control Plane API — secure sandboxes for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Kashyap Puranik" }]
keywords = ["cagent", "security", "ai-agents", "sandbox", "isolation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.25.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/kashyaprpuranik/cagent"
Documentation = "https://github.com/kashyaprpuranik/cagent/tree/main/sdk"
Repository = "https://github.com/kashyaprpuranik/cagent"

[tool.hatch.build.targets.wheel]
packages = ["src/cagent"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
