[project]
name = "cagent-email-proxy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pyyaml==6.0.1",
    "google-auth==2.27.0",
    "google-auth-oauthlib==1.2.0",
    "msal==1.26.0",
    "pydantic==2.5.3",
]

[tool.uv]
exclude-newer = "2026-04-02T00:00:00Z"
