[project]
name = "cagent-warden"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "docker==7.1.0",
    "requests>=2.32.0,<3",
    "pyyaml==6.0.1",
    "websockets==12.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
]

[tool.uv]
exclude-newer = "2026-04-02T00:00:00Z"
